# libhwloc2-rs

./: .gitignore  Cargo.toml  Dockerfile_example  Makefile  README.md
hwloc2-rs/: Cargo.toml
hwloc2-rs/examples/: print_all.rs
hwloc2-rs/src/: bitmap.rs  error.rs  lib.rs  types.rs
hwloc2-rs/src/object/: attributes.rs  mod.rs
hwloc2-rs/src/topology/: filters.rs  flags.rs  mod.rs  support.rs
hwloc2-sys/: .gitignore  Cargo.toml  README.md  build.rs
hwloc2-sys/src/: bindings.rs
