[package]
name = "hwloc2"
version = "0.1.0"
edition = "2021"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
repository = "https://github.com/ckatsak/libhwloc2-rs"
license = "Apache-2.0"

[dependencies]
hwloc2-sys = { path = "../hwloc2-sys" }
libc = "^0.2"
bitflags = "^1.3"
thiserror = "^1"
enum-primitive-derive = "^0.2.2"
num-traits = "^0.2"

[dev-dependencies]
anyhow = "^1"
