[package]
name = "hwloc2-sys"
version = "0.1.0"
edition = "2021"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
repository = "https://github.com/ckatsak/libhwloc2-rs"
license = "Apache-2.0"
build = "build.rs"
links = "hwloc"

[dependencies]
libc = "^0.2"

[build-dependencies]
pkg-config = "^0.3.25"
